retrieveUnpackaged/objects/Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>Id of the actual/standard attachment, this is referenced in the view formula field</description>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Reporting</label>
        <referenceTo>Award_Reporting__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expert_Review_Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert Review Panel</label>
        <referenceTo>Expert_Review_Panel__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitoring_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monitoring Activity</label>
        <referenceTo>Monitoring_Activity__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFA/RFP</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Used for storing the size of attachment</description>
        <label>Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stages__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage</label>
        <referenceTo>Stages__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Picklist for storing the type of document/attachment</description>
        <label>File Type</label>
        <picklist>
            <picklistValues>
                <fullName>1199 Direct Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor’s Statement Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Certification Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governing Body Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Certification of Non-Profit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Union Concurrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List of names of any funding organizations/sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated indirect cost agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor/Project Director Position Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor&apos;s Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1199 Direct Deposit Contact Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAE Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAE Waiver Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <description>hyper Link to the actual attachment</description>
        <formula>IF( $Profile.Name == &apos;Applicant&apos;, HYPERLINK(&quot;/granteeportal/servlet/servlet.FileDownload?file=&quot;+Attachment_Id__c, &quot;Click Here to Download File&quot;), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment_Id__c, &quot;Click Here to Download File&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <description>field used only in organization related list, to know the visibilty</description>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External and Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <label>Attachment Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <recordTypes>
        <fullName>Account_Attachment</fullName>
        <active>true</active>
        <label>Account Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_Attachment</fullName>
        <active>true</active>
        <label>Application Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Award_Attachment</fullName>
        <active>true</active>
        <label>Award Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Award_Reporting_Attachment</fullName>
        <active>true</active>
        <label>Award Reporting Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Attachment</fullName>
        <active>true</active>
        <label>Contact Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monitoring_Activity</fullName>
        <active>true</active>
        <label>Monitoring Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nofa_Attachment</fullName>
        <active>true</active>
        <label>Nofa Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Panel_Attachment</fullName>
        <active>true</active>
        <label>Panel Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stage_Attachment</fullName>
        <active>true</active>
        <label>Stage Attachment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>